Simplify template and control visibility of the two import strategies by fading out the inactive one to avoid clicking within the wrong form.

--- a/refinery/ui/source/styles/refinery-style.less
+++ b/refinery/ui/source/styles/refinery-style.less
@@ -1591,3 +1591,17 @@ body.is-screenshot-ready {
   top: 50%;
   transform: translateY(-50%);
 }
+
+.fade-out-able.disabled {
+  position: relative;
+
+  &.disabled:before {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(255, 255, 255, 0.75);
+  }
+}
